--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -45,6 +45,7 @@
                         android:textColor="#5B6B93"
                         android:text="@string/weixin_name"/>
                     <TextView
+                        android:id="@+id/detail_comment"
                         android:textSize="14sp"
                         android:textColor="#000000"
                         android:layout_margin="3dp"
